speed up slider

--- a/OpenShift/app/src/main/res/layout/activity_main.xml
+++ b/OpenShift/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -121,5 +121,12 @@
                 android:max="99"
                 android:progress="99" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="killDemon"
+            android:text="@string/killButton" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
